@@ -29,13 +29,13 @@ module ActiveRecord
         create_without_timestamps
       end
 
-      def update_with_timestamps #:nodoc:
+      def update_with_timestamps(*args) #:nodoc:
         if record_timestamps
           t = self.class.default_timezone == :utc ? Time.now.utc : Time.now
           write_attribute('updated_at', t) if respond_to?(:updated_at)
           write_attribute('updated_on', t) if respond_to?(:updated_on)
         end
-        update_without_timestamps
+        update_without_timestamps(*args)
       end
   end
 end
