@@ -1,0 +1,5 @@
+# These settins change the behavior of Rails 2 apps and will be defaults
+# for Rails 3. You can remove this initializer when Rails 3 is released.
+
+# Only save the attributes that have changed since the record was loaded.
+ActiveRecord::Base.partial_updates = true
